# ASR

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  ai.md  pyproject.toml
.github/workflows/: ci.yml
docs/en/: README.md
docs/en/code-documentation/: scripts_data_download.md
docs/ru/: README.md
docs/ru/code-documentation/: scripts_data_download.md
scripts/: data_download.py  data_download.sh
tests/unit/: test_smoke.py
