[project]
name = "asr"
version = "0.1.0"
description = "Production-oriented toolkit for building, training, and evaluating automatic speech recognition (ASR) models with reproducible ML workflows."
authors = [
    { name = "Anton Golubchikov", email = "anton1programmist@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [{ include = "asr", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
ruff = "^0.9.8"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.5"
pre-commit = "^4.1.0"

[tool.poetry.group.ml.dependencies]
numpy = "^2.2.3"
pandas = "^2.2.3"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
pyarrow = "^19.0.1"
torch = "^2.6.0"
torchaudio = "^2.6.0"
librosa = "^0.10.2.post1"
soundfile = "^0.13.1"
jiwer = "^3.1.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
huggingface-hub = "^0.29.1"
datasets = "^3.3.2"
accelerate = "^1.4.0"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src/asr --cov-report=term-missing"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
]
markers = [
    "integration: marks integration tests",
    "slow: marks slow tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
mypy_path = "src"
packages = ["asr"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "RUF",
    "ANN",
    "ARG",
    "PTH",
    "PT",
    "S",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "ANN001"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
